<resources>
    <string name="app_name">BlockBuster!</string>
    <string name="id_usuario">- Usuario -</string>
    <string name="id_contrasena">- Contraseña -</string>
    <string name="id_botonLogin">ACCEDER</string>
    <string name="id_botonRegistro">REGISTRARSE</string>
    <string name="id_recontrasena">- Repite la contraseña -</string>
    <string name="id_headerFavoritos">¡Tus películas favoritas!</string>
    <string name="id_saludo">¡BIENVENIDO A LA APLICACIÓN!</string>
    <string name="id_textoRegistro">REGISTRARSE</string>
    <string name="id_yaRegis">¿Ya tienes una cuenta? Inicia sesión</string>
    <string name="id_email">- Correo electrónico -</string>
    <string name="id_textoIni">INICIAR SESIÓN</string>
    <string name="titulo">Titulo</string>
    <string name="director">Director(es)</string>
    <string name="actores">Reparto</string>
    <string name="anyo">Año</string>
    <string name="duracion">Duración</string>
    <string name="genero">Género(s)</string>
    <string name="sinopsis">SINÓPSIS</string>
    <string name="visto">Ya la he visto</string>
    <string name="boton_guardarCambios">GUARDAR</string>
    <string name="valoracion">VALORACIÓN:</string>
    <string name="info_publicacion">Año de publicación:</string>
    <string name="info_genero">Género:</string>
    <string name="info">INFORMACIÓN</string>
    <string name="trailer">Tráiler oficial</string>
    <string name="info_duracion">Duración</string>
    <string name="anadirPeli">AÑADIR PELÍCULA</string>
    <string name="info_url">URL del tráiler (Youtube)</string>
    <string name="modificar">Modificar información</string>
    <string name="busqueda">Búsqueda de películas</string>
    <string name="eliminar">Eliminar película</string>
    <string name="cerrar">Cerrar sesión</string>
    <string name="noti_texto_cerrarSesion">¡Aún tienes muchas películas y series por ver!</string>
    <string name="noti_titulo_cerrarSesion">¿Ya te vas?</string>
    <string name="noti_si">ENTRAR</string>
    <string name="noti_no">QUIZÁ MÁS TARDE</string>


    <string name="invita">¡Miles de historias te esperan!</string>
    <string name="perfil">Mi perfil</string>
    <string name="ajustes">Ajustes</string>
    <string name="todos">Todas las películas</string>
    <string name="nested">TOP películas</string>
    <string name="paraVer">Para ver</string>

    <string name="cambiaImagen">Seleccionar imagen de la galería</string>
    <string name="modif">MODIFICAR INFORMACIÓN</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Todas las películas</string>
    <string name="menu_gallery">TOP películas</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="t1">Toca una película para ver</string>
    <string name="t2">la información resumida</string>
    <string name="d_faltaTituloDirector_m">Por favor, indica el título y el director de la película. ¡Son obligatorios!</string>
    <string name="action_settings">Ajustes</string>
    <string name="d_faltaTituloDirector_t">ERROR AL AÑADIR PELÍCULA</string>
    <string name="d_faltaTituloDirector_b">ENTENDIDO</string>
    <string name="d_peliYaRegistrada_t">¡Pelicula ya registrada!</string>
    <string name="d_peliYaRegistrada_m">La pelicula que quieres añadir ya está registrada en la aplicación.</string>
    <string name="d_peliYaRegistrada_b">ENTENDIDO</string>
    <string name="d_usuarioYaRegistrado_t">¡USUARIO YA REGISTRADO!</string>
    <string name="d_usuarioYaRegistrado_m">El email que quieres vincular a tu cuenta ya está registrado. Por favor, inicia sesión o crea una cuenta nueva.</string>
    <string name="d_usuarioYaRegistrado_b">DE ACUERDO</string>
    <string name="e_contraseñasRepesNoCoinciden">¡Las contraseñas introducidas no coinciden!</string>
    <string name="e_emailIncorrecto">El correo electrónico no es válido.</string>
    <string name="e_registroVacio">¡Debes completar todos los campos para registrarte!</string>
    <string name="e_login_t">¡Credenciales incorrectas!</string>
    <string name="e_login_m">Las credenciales introducidas no coinciden con ningún usuario registrado.</string>
    <string name="e_login_b">ENTENDIDO</string>
    <string name="b_cancelar">CANCELAR</string>
    <string name="b_aceptar">ACEPTAR</string>
    <string name="pregunta_eliminar">¿Estás seguro/a de que quieres eliminar la película? ¡Esta acción no se puede deshacer!</string>
    <string name="atencion">¿Te ha llamado la atención?</string>
    <string name="sinVer">Mi perfil</string>
    <string name="otros">OTROS</string>
    <string name="dial_cerrar_sesion_t">CERRAR SESION</string>
    <string name="dial_cerrar_sesion_m">¿Quieres cerrar la sesión?</string>
    <string name="cambiarIdioma">Cambiar idioma de app</string>
    <string name="euskera">Euskera</string>
    <string name="castellano">Español</string>
    <string name="ingles">Inglés</string>
    <string name="compartir">Compartir película</string>
    <string name="url">Url del tráiler</string>
    <string name="user">Tu email</string>
    <string name="pass">Tu contraseña</string>
    <string name="introduce">Introduce tu email y contraseña</string>
    <string name="bienvenido">¡Usuario añadido con éxito! Bienvenid@,</string>
    <string name="errorr">Registro fallido, ha ocurrido un error. Inténtalo de nuevo</string>
    <string name="novedades">Novedad</string>
    <string name="valoradas">Mejor valoradas</string>
    <string name="interes">Quizá te interese...</string>
    <string name="hola">¡Bienvenid@,</string>
    <string name="exportar">Exportar lista</string>
    <string name="vista">¡Has visto una película fantástica!</string>
    <string name="reinicio_t">Reiniciar para aplicar los cambios</string>
    <string name="pregunta_reiniciar">La aplicación debe reiniciarse para aplicar los cambios de idioma. ¿Quieres continuar?</string>
    <string name="b_reiniciar_ahora">Reiniciar ahora</string>
    <string name="b_cancelar_reinicio">Seguir en la app</string>
    <string name="temaAlert">El tema de DÍA está ACTIVO</string>
    <string name="temaAlertNoche">El tema de NOCHE está ACTIVO</string>
    <string name="nombredeusuario">Nombre de usuario</string>
    <string name="eligenickname">Elige tu nombre de usuario en BlockBuster!</string>
    <string name="minick">Mi nombre de usuario es...</string>
    <string name="idiomaapp">Idioma de la aplicación</string>
    <string name="eligeidioma">Elige el idioma de la aplicación</string>
    <string name="exportadoExito">¡La lista de películas sin ver se ha exportado correctamente!</string>
    <string name="entrar_noti">ENTRAR</string>
    <string name="titulo_noti">¿Ya te vas?</string>
    <string name="mensaje_noti">¡Aún tienes muchísimas películas y series esperándote!</string>
    <string name="dial_cambiar_caratula_titulo">Cambiar carátula</string>
    <string name="dial_cambiar_caratula_mensaje">Introduce la URL de la imagen. Puedes buscarla en internet</string>
    <string name="dial_cambiar_caratula_campo">Url del recurso</string>
    <string name="text_perfil">Mi perfil</string>
    <string name="text_perfil_email">Correo electrónico</string>
    <string name="galeria">Galería de fotos</string>
    <string name="camara">Cámara</string>
    <string name="tituloN">¡Hemos añadido una película nueva!</string>
    <string name="mensajeN">Se trata de...</string>
    <string name="iniciaSesion">Debes iniciar sesión para realizar la operación</string>
    <string name="title_activity_act_mapa">Act_Mapa</string>
    <string name="cine">Cines cercanos</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">This is an app widget description</string>
    <string name="introduce_email">Introduce tu email para vincular el widget</string>
    <string name="num_entradas" translatable="false">Selecciona el nº de entradas:</string>
    <string-array name="filas">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
    </string-array>
    <string-array name="asientos">
        <item>A</item>
        <item>B</item>
        <item>C</item>
        <item>D</item>
        <item>E</item>
        <item>F</item>
        <item>G</item>
        <item>H</item>
        <item>I</item>
    </string-array>
    <string name="compra">COMPRA DE ENTRADAS</string>
    <string name="compra_peli">Comprar entrada</string>
    <string name="eligeAsiento">Haga su selección:</string>
    <string name="fila">FILA</string>
    <string name="asiento">ASIENTO</string>
    <string name="alerta">**Si se compra más de una entrada, se asignarán los asientos contiguos que estén diponibles</string>
    <string name="permisosMaps">¡Debes conceder los permisos de geolocalización para acceder al mapa!</string>
    <string name="miUbicacion">¡Estás aquí!</string>
    <string name="noti_compra_mensaje">Se ha tramitado correctamente la compra de entradas para la película</string>
    <string name="reserva">Se está tramitando la reserva. Se te notificará en breve...</string>
    <string name="planes">¿Te apetece una tarde de cine?</string>
    <string name="cuando">Cuándo:</string>
    <string name="pelisQueNoHasVisto">Películas que no has visto</string>
    <string name="subir">Subiendo imagen al servidor DAS</string>
    <string name="espera">Espera por favor</string>
    <string name="imagenSubida">Imagen guardada con éxito</string>
    <string name="compraEnt">Compra de entradas BLOCKBUSTER</string>
    <string name="errorCaratula">No se ha podido actulizar la carátula. Inténtalo de nuevo</string>

</resources>