<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingHorizontal="20dp"
    android:paddingVertical="10dp"
    tools:context=".activities.Act_Login">

    <ImageView
        android:id="@+id/imageView12"
        android:layout_width="442dp"
        android:layout_height="138dp"
        android:paddingEnd="70dp"
        android:paddingBottom="-20dp"
        app:srcCompat="@drawable/logo2" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:background="#48FFFFFF"

        app:cardBackgroundColor="#FFFFFF"
        app:cardCornerRadius="0dp"
        app:cardElevation="10dp"
        app:layout_constraintEnd_toEndOf="@+id/tuEmail"
        app:layout_constraintStart_toStartOf="@+id/tuEmail"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:paddingHorizontal="20dp"
                    android:paddingTop="27dp">

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:cardCornerRadius="40dp">

                        <TextView
                            android:id="@+id/id_textoIni"
                            style="@style/titulos"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"

                            android:text="@string/id_textoIni"

                            />
                    </androidx.cardview.widget.CardView>

                    <TextView
                        android:id="@+id/textView9"
                        style="@style/subtitulos"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/user" />

                    <EditText
                        android:id="@+id/id_usuario_login"
                        style="@style/campos"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:autoText="true"
                        android:drawableStart="@drawable/person_registro"
                        android:hint="@string/id_email"

                        ></EditText>

                    <TextView
                        android:id="@+id/textView10"
                        style="@style/subtitulos"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/pass" />

                    <EditText
                        android:id="@+id/id_contrasena_login"
                        style="@style/campos"
                        android:drawableStart="@drawable/baseline_key_24"
                        android:hint="@string/id_contrasena"
                        android:inputType="textPassword">

                    </EditText>

                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="20dp" />

                </LinearLayout>

            </LinearLayout>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:cardCornerRadius="15dp">

                <Button
                    android:id="@+id/id_login"
                    style="@style/boton_azul"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:onClick="comprobarUsuario"
                    android:text="@string/id_botonLogin" />

            </androidx.cardview.widget.CardView>

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="180dp">

            <ImageView
                android:id="@+id/imageView11"
                android:layout_width="413dp"
                android:layout_height="220dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/main"
                tools:layout_editor_absoluteX="-23dp" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>


</LinearLayout>